# stick

./: Cargo.toml  README.md  generate_ui.py  install.sh  rewrite_ui.py  update_ui.py
.github/workflows/: release.yml
src/: cli.rs  config.rs  daemon.rs  logger.rs  main.rs  notifier.rs  scanner.rs  watcher.rs
src/tui/: app.rs  mod.rs  ui.rs
