[package]
name = "stick"
version = "0.1.5"
edition = "2021"
description = "macOS/Linux 한글 파일명 NFC 정규화 도구"
authors = ["pjw"]
license = "MIT"

[dependencies]
# CLI 인자 파싱
clap = { version = "4", features = ["derive"] }

# TUI 프레임워크
ratatui = "0.29"
crossterm = "0.28"

# 유니코드 정규화 (핵심)
unicode-normalization = "0.1"

# 파일시스템 감시
notify = "7"

# 직렬화/역직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# 사용자 디렉토리 경로
dirs = "5"

# 날짜/시간
chrono = "0.4"

# 데몬화 (Unix 전용)
daemonize = "0.5"

# 에러 처리
anyhow = "1"

# Unix 시그널 처리
nix = { version = "0.29", features = ["signal", "process"] }

# 워킹 디렉토리 탐색
walkdir = "2"

# 틸드(~) 경로 확장
shellexpand = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
